# spiredb

./: .gitignore  Makefile  README.md
.github/workflows/: checks.yml  docker-build.yml  spiredb-checks.yml  spiredb-docker-build.yml  spiresql-checks.yml  spiresql-docker-build.yml  test.yml
compute/: Cargo.toml
compute/spire/: Cargo.toml
compute/spire-cli/: Cargo.toml
compute/spire-cli/src/: cli.rs  main.rs
compute/spire/src/: cli.rs  main.rs
compute/spire/src/commands/: cluster.rs  data.rs  mod.rs  plugin.rs  schema.rs  sql.rs
compute/spire_common/: Cargo.toml
compute/spire_common/src/: config.rs  error.rs  lib.rs
compute/spire_proto/: Cargo.toml  build.rs  proto
compute/spire_proto/src/: lib.rs
compute/spiresql/: Cargo.toml  spiresql.toml
compute/spiresql/src/: cache.rs  config.rs  context.rs  ddl.rs  distributed.rs  distributed_exec.rs  dml.rs  exec.rs  filter.rs  lib.rs  main.rs  pool.rs  provider.rs  pruning.rs  routing.rs  statistics.rs  topology.rs
compute/spiresql/src/sql/: config.rs  context.rs  ddl.rs  distributed.rs  distributed_exec.rs  dml.rs  exec.rs  filter.rs  mod.rs  pool.rs  provider.rs  routing.rs  statistics.rs  topology.rs
compute/spiresql/src/stream/: admin.rs  cdc.rs  client.rs  config.rs  consumer.rs  error.rs  interceptor.rs  mod.rs  producer.rs  serde.rs  types.rs
compute/spiresql/src/vector/: client.rs  config.rs  error.rs  mod.rs  types.rs
compute/spiresql/tests/: cache_test.rs  config_test.rs  ddl_test.rs  distributed_test.rs  dml_test.rs  filter_test.rs  pool_test.rs  pruning_test.rs  regression_test.rs  routing_test.rs  statistics_test.rs  stream_admin_test.rs  stream_cdc_test.rs  stream_config_test.rs  stream_consumer_test.rs  stream_error_test.rs  stream_interceptor_test.rs  stream_producer_test.rs  stream_serde_test.rs  stream_types_test.rs  topology_test.rs  vector_client_test.rs  vector_types_test.rs
compute/spiresql/tests/common/: mock_vector.rs  mod.rs
docker/: Dockerfile  SpireDB.Dockerfile  SpireSQL.Dockerfile
spiredb/: .credo.exs  mix.exs
spiredb/apps/spiredb_common/: mix.exs
spiredb/apps/spiredb_common/lib/spiredb_common/: application.ex  ra_readiness.ex
spiredb/apps/spiredb_common/lib/spiredb_common/schema/: types.ex
spiredb/apps/spiredb_common/priv/proto/: cluster.proto  data_access.proto  internal.proto
spiredb/apps/spiredb_common/test/common/schema/: types_test.exs
spiredb/apps/spiredb_pd/: mix.exs
spiredb/apps/spiredb_pd/lib/pd/: plugin_manager.ex  scheduler.ex  server.ex  supervisor.ex  tso.ex
spiredb/apps/spiredb_pd/lib/pd/api/: endpoint.ex  grpc.ex  grpc_supervisor.ex  reflection.ex  reflection_v1alpha.ex
spiredb/apps/spiredb_pd/lib/pd/scheduler/: leader_coordinator.ex  load_monitor.ex
spiredb/apps/spiredb_pd/lib/pd/schema/: registry.ex  stats_collector.ex
spiredb/apps/spiredb_pd/lib/spiredb_pd/: application.ex  diagnostic.ex
spiredb/apps/spiredb_pd/test/pd/: tso_test.exs
spiredb/apps/spiredb_pd/test/pd/api/: grpc_test.exs
spiredb/apps/spiredb_pd/test/pd/scheduler/: balance_planner_test.exs  leader_coordinator_test.exs
spiredb/apps/spiredb_pd/test/pd/schema/: registry_test.exs  stats_collector_test.exs
spiredb/apps/spiredb_store/: mix.exs
spiredb/apps/spiredb_store/lib/spiredb_store/: application.ex
spiredb/apps/spiredb_store/lib/store/: change_stream.ex  plugin.ex  server.ex  slow_query_log.ex  stream.ex  supervisor.ex  task_executor.ex  transaction.ex  vector_index.ex
spiredb/apps/spiredb_store/lib/store/api/: data_access.ex  endpoint.ex  internal_transaction.ex  reflection.ex  reflection_v1alpha.ex
spiredb/apps/spiredb_store/lib/store/arrow/: encoder.ex
spiredb/apps/spiredb_store/lib/store/change_stream/: raft_reader.ex
spiredb/apps/spiredb_store/lib/store/filter/: parser.ex
spiredb/apps/spiredb_store/lib/store/kv/: column_families.ex  engine.ex  iterator_pool.ex  metrics.ex  scanner.ex  ttl.ex  ttl_filter.ex
spiredb/apps/spiredb_store/lib/store/plugin/: loader.ex  registry.ex  storage.ex
spiredb/apps/spiredb_store/lib/store/region/: data_migration.ex  raft.ex  read_ts_tracker.ex  state_machine.ex
spiredb/apps/spiredb_store/lib/store/schema/: encoder.ex  index_maintainer.ex  types.ex  validator.ex
spiredb/apps/spiredb_store/lib/store/stats/: encoder.ex
spiredb/apps/spiredb_store/lib/store/stream/: consumer_group.ex  consumer_group_storage.ex  event.ex  idempotency.ex  offset_store.ex  time_key_encoder.ex  watermark.ex
spiredb/apps/spiredb_store/lib/store/telemetry/: rocksdb.ex
spiredb/apps/spiredb_store/lib/store/transaction/: async_commit_coordinator.ex  back_pressure.ex  connection_pool.ex  crash_recovery.ex  executor.ex  internal_client.ex  lock.ex  lock_wait_queue.ex  manager.ex  metrics_handler.ex  reaper.ex  ssi_conflict_detector.ex  telemetry.ex
spiredb/apps/spiredb_store/lib/store/vector_search/: distributed.ex
spiredb/apps/spiredb_store/test/store/: change_stream_test.exs  slow_query_log_test.exs  stream_test.exs  task_executor_test.exs  transaction_test.exs  vector_index_test.exs
spiredb/apps/spiredb_store/test/store/api/: data_access_test.exs
spiredb/apps/spiredb_store/test/store/arrow/: encoder_test.exs
spiredb/apps/spiredb_store/test/store/kv/: engine_config_test.exs  iterator_pool_test.exs  iterator_staleness_test.exs  metrics_test.exs  scanner_test.exs  ttl_test.exs
spiredb/apps/spiredb_store/test/store/plugin/: behaviours_test.exs  loader_test.exs  registry_test.exs  storage_test.exs
spiredb/apps/spiredb_store/test/store/region/: data_migration_test.exs  raft_test.exs
spiredb/apps/spiredb_store/test/store/schema/: encoder_test.exs  index_maintainer_test.exs  validator_test.exs
spiredb/apps/spiredb_store/test/store/stream/: event_test.exs  idempotency_test.exs  offset_store_test.exs  time_key_encoder_test.exs  xdel_test.exs
spiredb/apps/spiredb_store/test/store/transaction/: connection_pool_test.exs  (+3 more)
spiredb/apps/spiredb_store/test/support/: mock_grpc.ex  mock_server.ex  rocksdb_helper.ex
spiredb/config/: config.exs  runtime.exs
spiredb/rel/: env.sh.eex
(+19 files in other folders)
