[workspace]
members = ["spire", "spiresql", "spire_common", "spire_proto"]
resolver = "2"

[workspace.dependencies]
tonic = "0.14"
prost = "0.14"
prost-types = "0.14"
tonic-build = "0.14"
tonic-prost-build = "0.14"
tonic-prost = "0.14"
tokio = { version = "1.49", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
config = "0.15"
datafusion = "52.0.0"
pgwire = "0.37"
async-trait = "0.1"
futures = "0.3"
spire_proto = { path = "./spire_proto" }
spire_common = { path = "./spire_common" }
fastrace = "0.7"
env_logger = "0.11"
log = "0.4"
mimalloc = "0.1"
kovan = "0.1"
kovan-map = "0.1"
kovan-channel = "0.1"
parking_lot = "0.12"
toml = "0.8"
# Distributed/runtime dependencies
core_affinity = "0.8"
num_cpus = "1.17"
ahash = "0.8"
async-stream = "0.3"
base64 = "0.22"
serde_json = "1.0"
byteorder = "1.5"
socket2 = { version = "0.6", features = ["all"] }

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
