[package]
name = "spire-cli"
version = "0.1.0"
edition = "2024"
description = "SpireDB command-line interface"
license = "AGPL-3.0-only"
repository = "https://github.com/spiredb/spiredb/"
readme = "../../README.md"
keywords = ["database", "distributed", "cli"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "spire"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
spire_proto = { workspace = true }
spire_common = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
