[package]
name = "spire"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
spire_proto = { workspace = true }
spire_common = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
