[package]
name = "spire_proto"
version = "0.1.0"
edition = "2024"
description = "Protocol buffer definitions for SpireDB"
license = "AGPL-3.0-only"
repository = "https://github.com/spiredb/spiredb/"
readme = "../../README.md"
keywords = ["database", "distributed", "protobuf", "grpc"]
categories = ["database"]


[dependencies]
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tonic-prost = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
tonic-prost-build = { workspace = true }
